# photo-curator

./: .gitignore  README.md  SKILL.md  curator.config.example.yaml  pyproject.toml
.github/workflows/: release.yml
curator/: __main__.py  budget.py  cli.py  config.py  db.py  events.py  grouping.py  inventory.py  manifest.py  metrics.py  model.py  output.py  prompts.py  qualification.py  report.py  stage2.py  stage3.py  stage4.py  tournament.py  verdicts.py
curator/chat/: deltas.py  intent.py  memory.py  qa.py  steering.py
curator/data/: cities.csv  device_resolutions.json
curator/prompts/: analyze_photo.md  analyze_photo_reworded.md  final_verification.md  highlights_eval.md  intent.md  memory.md  qa.md  tournament.md
curator/providers/: catalog.py  keystore.py  litellm_model.py  registry.py  registry.yaml
curator/review/: api.py  corrections.py  server.py
curator/schemas/: analyze.schema.json  (+8 more)
packaging/: photo-curator.spec
scripts/: build_calibration.py  install.ps1  install.sh  run_golden.py
tests/: conftest.py  test_catalog.py  test_cli.py  test_cli_entry.py  test_config.py  test_corrections.py  test_critique.py  test_db.py  test_deltas.py  test_events.py  test_grouping.py  test_intent.py  test_inventory.py  test_keystore.py  test_litellm_model.py  test_memory.py  test_metrics.py  test_model.py  test_output.py  test_pipeline_hooks.py  test_prompts.py  test_qa.py  test_qualification.py  test_registry.py  test_report.py  test_review_server.py  test_runner.py  test_stage2.py  test_stage3.py  test_stage4.py  test_steering.py  test_steering_determinism.py  test_system.py  test_thumbs.py  test_tournament.py  test_tui_journey.py  test_tui_memory.py  test_tui_model_picker.py  test_tui_setup_flow.py  test_tui_welcome.py  (+1 more)
(+17 files in other folders)
