[project]
name = "photo-curator"
version = "0.1.0"
description = "Local photo curation: classical CV triage + local vision LLM"
requires-python = ">=3.11"
dependencies = [
  "Pillow>=10.0", "pillow-heif>=0.16", "opencv-python-headless>=4.9,<5",
  "ImageHash>=4.3", "numpy>=1.26", "PyYAML>=6.0", "requests>=2.31", "jsonschema>=4.21",
]

[project.scripts]
photo-curator = "curator.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "textual>=0.60", "keyring>=24"]
app = ["textual>=0.60", "litellm>=1.40", "keyring>=24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["curator"]

[tool.hatch.build.targets.wheel.force-include]
"curator/data" = "curator/data"
"curator/prompts" = "curator/prompts"
"curator/schemas" = "curator/schemas"

[tool.pytest.ini_options]
asyncio_mode = "auto"
